--- a/views/regist.ejs
+++ b/views/regist.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>无名博客</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <title>博客</title>
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
 <div class="container">
@@ -15,18 +15,20 @@
         <b class="point">·</b>
         <a class="regist-tab-btn active" href="/regist">注册</a>
     </div>
-
-    <form class="login-regist-form">
-        <embed src="/images/user_icon.svg" type="image/svg+xml"  width="30" height="30" style="position: absolute; top: 10px; left:2px"/>
-        <embed src="/images/passwd_icon.svg" type="image/svg+xml" width="25" height="25" style="position: absolute; top: 66px; left:4px"/>
-        <embed src="/images/passwd_icon.svg" type="image/svg+xml" width="25" height="25" style="position: absolute; top: 121px; left:4px"/>
-        <input type="text" class="user-name-input" placeholder="用户名">
-        <input type="password" class="pass-word-input" placeholder="密码" style="border-bottom-left-radius: 0px;
+    <div class="notice-container">
+        <!--<h3 class="notice"></h3>-->
+    </div>
+    <form class="login-regist-form" method="post">
+        <embed src="/img/user_icon.svg" type="image/svg+xml"  width="30" height="30" style="position: absolute; top: 10px; left:2px"/>
+        <embed src="/img/passwd_icon.svg" type="image/svg+xml" width="25" height="25" style="position: absolute; top: 66px; left:4px"/>
+        <embed src="/img/passwd_icon.svg" type="image/svg+xml" width="25" height="25" style="position: absolute; top: 121px; left:4px"/>
+        <input type="text" name='name' class="user-name-input" placeholder="用户名">
+        <input type="password" name="password" class="pass-word-input" placeholder="密码" style="border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px; border-bottom-color: #fff">
-        <input type="password" class="pass-word-input" placeholder="再次输入密码">
+        <input type="password" name="password-repeat" class="pass-word-input" placeholder="再次输入密码">
 
 
-        <input type="button" value="注册" class="regist-btn">
+        <input type="submit" value="注册" class="regist-btn">
     </form>
 
 </div>
