--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,7 @@
 body {
     background-color: #f1f1f1;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding-top:70px
 }
 
 a {
@@ -26,6 +27,7 @@ ul {
     margin: 10% auto 0 auto;
     overflow: hidden;
     padding-bottom: 40px;
+    position:relative
 }
 
 .tab-title {
@@ -62,6 +64,18 @@ ul {
     right: 50%;
     z-index: 2;
     float: left
+}
+
+.notice-container {
+    position: absolute;
+    top:90px;
+    width:400px;
+}
+.notice {
+    color: #f00;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
 }
 
 .login-tab-btn {
