--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,61 @@
     <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-<h1>你好，世界！</h1>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid col-lg-9">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <span class="glyphicon glyphicon-list-alt logo-icon navbar-toggle" aria-hidden="true"></span>
+            <a class="navbar-brand logo-text" href="#">博客</a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">所有 <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">我的</a></li>
+            </ul>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="搜索博客">
+                </div>
+                <button type="submit" class="btn btn-default">搜索</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right col-sm-5 col-md-5 col-lg-4">
+                <li class="col-xs-4 col-sm-4 col-md-4" style="float: left; border:1px solid #888; border-radius: 5px; box-sizing: border-box">
+                    <button type="button" class="btn btn-link login-btn">登录</button>
+                </li>
+                <li class="col-xs-4 col-sm-4 col-md-4">
+                    <button type="button" class="btn btn-success regist-btn col-xs-12">注册</button>
+                </li>
+                <li class="col-xs-4 col-sm-4 col-md-4" style="float: right">
+                    <button type="button" class="btn btn-info write-btn col-xs-12">写文章</button>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-8">.col-xs-12 .col-sm-6 .col-md-8</div>
+    <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+<div class="row">
+    <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
+    <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
+    <!-- Optional: clear the XS cols if their content doesn't match in height -->
+    <div class="clearfix visible-xs-block"></div>
+    <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
+</div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/dist/js/jquery-3.0.0.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
