--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>无名博客</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <title>博客</title>
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
 <div class="container">
@@ -17,8 +17,8 @@
     </div>
 
     <form class="login-regist-form">
-        <embed src="/images/user_icon.svg" type="image/svg+xml"  width="30" height="30" style="position: absolute; top: 10px; left:2px"/>
-        <embed src="/images/passwd_icon.svg" type="image/svg+xml" width="25" height="25" style="position: absolute; top: 66px; left:4px"/>
+        <embed src="/img/user_icon.svg" type="image/svg+xml"  width="30" height="30" style="position: absolute; top: 10px; left:2px"/>
+        <embed src="/img/passwd_icon.svg" type="image/svg+xml" width="25" height="25" style="position: absolute; top: 66px; left:4px"/>
         <input type="text" class="user-name-input" placeholder="用户名">
         <input type="password" class="pass-word-input" placeholder="密码">
 
