--- a/views/regist.ejs
+++ b/views/regist.ejs
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>博客</title>
     <link rel="stylesheet" href="/css/login.css">
+    <script src="/dist/js/jquery-3.0.0.min.js" type="text/javascript"></script>
+    <script src="/js/regist.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
@@ -16,21 +18,23 @@
         <a class="regist-tab-btn active" href="/regist">注册</a>
     </div>
     <div class="notice-container">
-        <!--<h3 class="notice"></h3>-->
+
+        <h3 class="notice"><%=error%></h3>
+
     </div>
-    <form class="login-regist-form" method="post">
+    <form class="login-regist-form" method="post" enctype="multipart/form-data">
         <embed src="/img/user_icon.svg" type="image/svg+xml"  width="30" height="30" style="position: absolute; top: 10px; left:2px"/>
         <embed src="/img/passwd_icon.svg" type="image/svg+xml" width="25" height="25" style="position: absolute; top: 66px; left:4px"/>
         <embed src="/img/passwd_icon.svg" type="image/svg+xml" width="25" height="25" style="position: absolute; top: 121px; left:4px"/>
         <input type="text" name='name' class="user-name-input" placeholder="用户名">
         <input type="password" name="password" class="pass-word-input" placeholder="密码" style="border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px; border-bottom-color: #fff">
-        <input type="password" name="password-repeat" class="pass-word-input" placeholder="再次输入密码">
-
+        <input type="password" name="repassword" class="pass-word-input" placeholder="再次输入密码">
 
         <input type="submit" value="注册" class="regist-btn">
     </form>
 
 </div>
+
 </body>
 </html>
